Several Improvements: Unit Tests, Servlet API, Taglib Requirements are now the same as those of Wicket 6.x

--- a/wicket.jsp/src/test/resources/wicket/jsp/TestServletAndJSPPage.html
+++ b/wicket.jsp/src/test/resources/wicket/jsp/TestServletAndJSPPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test of accessing a servlet</title>
+		<title>Test page to check the correct access of jsp / servlet</title>
 	</head>
 	
 	<body>
